<resources>
    <string name="app_name">Cub Scout Popcorn Selling</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="streetNumber">Street Number:</string>
    <string name="streetName">Street Name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip Code:</string>
    <string name="phone">Phone Number:</string>
    <string name="email">E-mail:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_customer_info">Customer Information</string>
    <string name="title_activity_scout_goal">Goal</string>
    <string name="title_activity_delivery_mode">DeliveryMode</string>
    <string name="title_activity_past_sales">PastSales</string>
    <string name="title_activity_DenLeaderMain">Den Leader Main</string>
    <string name="title_activity_den_sales_tracking" />
    <string name="title_activity_view_scouts" />
    <string name="title_activity_scout_status_page">ScoutStatusPage</string>
    <string name="title_activity_scout_main_page">ScoutMainPage</string>
    <string name="title_activity_sales_mode">SalesMode</string>
    <string name="title_activity_delivery_customer_info">Delivery Customer Info</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_order_finalization">Order Finalization</string>
    <string name="title_activity_view_products">ViewProducts</string>
    <string name="title_activity_sales_page2">SalesPage2</string>
    <string name="title_activity_admin_functions">Admin Functions</string>
    <string name="title_activity_add_scout">Add Scout</string>
    <string name="title_activity_add_product">Add Products</string>
    <string name="title_activity_den_goal">Den Goal</string>
    <string name="title_activity_sale_products">Products</string>
</resources>
