<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    style="@style/_CubScoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/BGColor"
    tools:context="com.mis478.popcornapp.CustomerInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingTop="20dp">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/FnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/fname"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/FnameBox"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:ems="10"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLength="15"
                    android:nextFocusDown="@+id/user_name"
                    android:nextFocusRight="@id/user_name"
                    android:textColor="@color/TextColor" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/LnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/lname"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/user_name"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:ems="10"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLength="15"
                    android:nextFocusRight="@+id/StreetNumberBox"
                    android:textColor="@color/TextColor" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/StreetNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/streetNumber"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/StreetNumberBox"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:inputType="number"
                    android:maxLength="7"
                    android:nextFocusRight="@+id/StreetNameBox"
                    android:textColor="@color/TextColor" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/AddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/streetName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/StreetNameBox"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:inputType="textCapWords|textPostalAddress"
                    android:maxLength="15"
                    android:nextFocusRight="@id/lname"
                    android:textColor="@color/TextColor" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/CityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/city"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/lname"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:maxLength="15"
                    android:nextFocusDown="@+id/price_progress"
                    android:nextFocusRight="@id/price_progress"
                    android:textColor="@color/TextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/StateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/state"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <Spinner
                    android:id="@+id/StateSpinner"
                    style="@style/SpinnerCubScoutTheme"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:textColor="@color/TextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ZipLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/zip"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/price_progress"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="5"
                    android:nextFocusDown="@+id/pass"
                    android:nextFocusRight="@id/pass"
                    android:textColor="@color/TextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/PnumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingLeft="15dp"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/pass"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:nextFocusDown="@+id/total_sales"
                    android:nextFocusRight="@id/total_sales"
                    android:textColor="@color/TextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/EmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingLeft="15dp"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextColor" />

                <EditText
                    android:id="@+id/total_sales"
                    style="@style/EditTextCubScoutTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:nextFocusDown="@+id/NextButton"
                    android:nextFocusRight="@id/NextButton"
                    android:textColor="@color/TextColor" />
            </TableRow>
        </TableLayout>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="50dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/BackButton"
                style="@style/ButtonCubScoutTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:clickable="true"
                android:onClick="ToDonation"
                android:text="@string/back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/NextButton"
                style="@style/ButtonCubScoutTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:clickable="true"
                android:onClick="ToFinalize"
                android:text="@string/next" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1" />
        </TableRow>


    </LinearLayout>
</ScrollView>